--- a/admin-page/views/customer/customer.ejs
+++ b/admin-page/views/customer/customer.ejs
@@ -35,7 +35,7 @@
                         <th style="width:8%;">Tổng Số Tiền Mua Hàng</th>
                         <th style="width:8%;">Trạng Thái Xác Thực</th>
                         <th style="width:8%;">Lần Đăng Nhập Cuối</th>
-                        <th>Cập Nhật</th>
+                        <th>Khóa/Mở Khóa</th>
                         <th>Xóa</th>     
                         <th style="display: none;"></th>           
                       </tr>
