--- a/admin-page/views/customer/customerDialogs.ejs
+++ b/admin-page/views/customer/customerDialogs.ejs
@@ -39,42 +39,18 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Chỉnh Sửa Thông Tin Khách Hàng</h4>
+                <h4 class="modal-title">Xác Nhận Khóa / Mở Khóa Tài Khoản</h4>
             </div>
 
             <div class="modal-body">
-                <form id="formupdatecustomeravatar" action="/upload" method="POST" enctype="multipart/form-data">
-                </form>
                 <form action="#" method="POST" id="formupdatecustomer">
                     <div class="form-group">
                         <label for="email" class="control-label">Email:</label>
                         <input type="text" class="form-control" id="email" name="email" readonly required>
+                        <input style="display:none;" type="text" class="form-control" id="status" name="status" readonly required>
                     </div>
-                    <div class="form-group">
-                        <label for="fullname" class="control-label">Họ Và Tên:</label>
-                        <input type="text" class="form-control" id="fullName" name="fullName">
-                    </div>
-                    <div class="form-group">
-                        <label for="avatar" class="control-label">URL Ảnh Đại Diện:</label>
-                        <div style="display: flex;flex-direction: row;">
-                            <input type="text" class="form-control" id="avatar" name="avatar">
-                            <input style="width:50%; margin-left:10px; align-self: center;" type="file"
-                                name="userAvatar" accept="image/png, image/jpeg"
-                                onchange="uploadImage('#formupdatecustomeravatar','#dlgupdatecustomer input[name=\'avatar\']');return false;"
-                                form="formupdatecustomeravatar">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="phoneNumber" class="control-label">Số Điện Thoại:</label>
-                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
-                    </div>
-                    <div class="form-group">
-                        <label for="address" class="control-label">Địa Chỉ:</label>
-                        <input type="text" class="form-control" id="address" name="address">
-                    </div>
-
                     <button type="submit" onclick="handleUpdateCustomer(); return false;" class="btn btn-info"
-                        data-dismiss="modal">Cập Nhật</button>
+                        data-dismiss="modal">OK</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
                 </form>
             </div>
