[admin-page] handle order log done

--- a/admin-page/views/customer/customer.ejs
+++ b/admin-page/views/customer/customer.ejs
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="box-body">
-                  <table id="customerTable" class="table table-bordered table-striped table-hover">
+                  <table id="customerTable" class="table no-margin table-striped table-hover">
                     <thead>
                       <tr>
                         <th>Email</th>
