--- a/admin-page/views/product/product.ejs
+++ b/admin-page/views/product/product.ejs
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="box-body">
-                  <table id="productTable" class="table table-bordered table-striped table-hover">
+                  <table id="productTable" class="table no-margin table-striped table-hover">
                     <thead>
                       <tr>
                         <th>ID</th>
