--- a/admin-page/views/category/category.ejs
+++ b/admin-page/views/category/category.ejs
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="box-body">
-                  <table id="categoryTable" class="table table-bordered table-striped table-hover">
+                  <table id="categoryTable" class="table no-margin table-striped table-hover">
                     <thead>
                       <tr>
                         <th>ID</th>
