--- a/admin-page/views/user/user.ejs
+++ b/admin-page/views/user/user.ejs
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="box-body">
-                  <table id="userAccountTable" class="table table-bordered table-striped table-hover">
+                  <table id="userAccountTable" class="table no-margin table-striped table-hover">
                     <thead>
                       <tr>
                         <th>Tên Đăng Nhập</th>
